# patriot-hacks-2024

./: .gitignore  flake.nix
backend/: pyproject.toml
backend/cyberfood/: __init__.py  oai.py  server.py
backend/cyberfood/config/: nova_classification_guide.md
backend/tests/: test_oai.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: AddPhoto.tsx  Home.tsx  Layout.tsx  Results.tsx
frontend/src/util/: api.ts
